@@ -1,5 +1,10 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincIdTieBoxBase.cs:
+	* ZincAsExTiaBoxBase.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* IZincTiaBox.cs:
 	* IZincIdTieBox.cs:
 	* ZincIdTieBoxBase.cs:
